// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPageBody is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPageBody ouiPageBody--borderRadiusNone testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiPageBody panelled also accepts panelProps 1`] = `
<div
  class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--subdued ouiPanel--noShadow ouiPanel--noBorder ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
/>
`;

exports[`OuiPageBody panelled can be set to true 1`] = `
<div
  class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--hasShadow ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--paddingLarge"
/>
`;

exports[`OuiPageBody restrict width can be set to a custom number 1`] = `
<div
  aria-label="aria-label"
  class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:1024px"
/>
`;

exports[`OuiPageBody restrict width can be set to a custom value and measurement 1`] = `
<div
  aria-label="aria-label"
  class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:24rem"
/>
`;

exports[`OuiPageBody restrict width can be set to a default 1`] = `
<div
  aria-label="aria-label"
  class="ouiPageBody ouiPageBody--borderRadiusNone ouiPageBody--restrictWidth-default testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
